fix(wi-modal): fix z-index for wi modal to close the modal

--- a/src/app/components/work-item-create/work-item-create-selector/work-item-create-selector.component.less
+++ b/src/app/components/work-item-create/work-item-create-selector/work-item-create-selector.component.less
@@ -1,12 +1,11 @@
 @import (reference) '../../../../assets/stylesheets/_base';
-
 .f8-wi-modal {
   position: absolute;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
-  z-index: 3;
+  z-index: 9999;
   padding: (@grid-gutter-width/2);
   margin: 0;
   overflow-y: auto;
